--- a/composer.json
+++ b/composer.json
@@ -33,13 +33,13 @@
     }
   },
   "require": {
-    "omnipay/common": "~2.0",
+    "omnipay/common": "^3",
     "php": "^7",
     "symfony/event-dispatcher": "^2.8"
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^2.0",
-    "omnipay/tests": "~2.0",
+    "omnipay/tests": "^3",
     "satooshi/php-coveralls": "^1.0"
   },
   "scripts": {
